tests/typing/good/testfile-bounds-1.scala
class C { def m[T >: Null](x: T) : T = x; var y = m[Any](2) }
object Main { def main(args: Array[String]) { } }
