tests/typing/bad/testfile-field1-1.scala
class A {
    def m() { var x: Boolean = true; var y: Int = x }
}
object Main { def main(args: Array[String]) { } }
